--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7772,7 +7772,7 @@ label {
 }
 
 .hero-img img {
-    height: 500px;
+  height: 500px;
 }
 
 .hero-title {
@@ -7798,7 +7798,7 @@ label {
 }
 .team-triangle {
   position: absolute;
-  background: url("../img/team/team-fg.png") no-repeat top right;
+  background: url("") no-repeat top right;
   height: 100%;
   width: 100%;
   z-index: 10000;
@@ -7854,3 +7854,25 @@ label {
   margin-bottom: 15px;
 }
 /*# sourceMappingURL=style.css.map */
+.text-bold {
+  font-weight: bold;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+.screenshots .position-relative {
+  box-shadow: 0px 1px 5px 3px rgba(179, 179, 179, 0.56);
+  -webkit-box-shadow: 0px 1px 5px 3px rgba(179, 179, 179, 0.56);
+  -moz-box-shadow: 0px 1px 5px 3px rgba(179, 179, 179, 0.56);
+}
+
+.screenshots .position-relative img {
+  height: 120px;
+}
+@media only screen and (max-width: 480px){
+  .screenshots .position-relative img {
+    height: auto;
+  }
+}
